<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInFirebaseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/cycletoolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCycleTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/first_status_cycle_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cycletoolbar" />

    <TextView
        android:id="@+id/txtCycleMessageDescription"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_status_cycle_not_created"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCycleTitle" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCreate"
        app:layout_constraintTop_toBottomOf="@+id/txtCycleMessageDescription"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btnCreate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/first_status_cycle_create_text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pieChart_view" />

    <Button
        android:id="@+id/btnHistory"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/first_status_cycle_history_text_button"
        app:layout_constraintBottom_toTopOf="@+id/btnDelete"
        tools:layout_editor_absoluteX="16dp"/>

    <Button
        android:id="@+id/btnDelete"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRed"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/first_status_cycle_delete_text_button" />

</androidx.constraintlayout.widget.ConstraintLayout>